tests/unit-tests/awsconfigs/apps/katib-external-db-with-kubeflow/test_data/expected/apps_v1_deployment_katib-db-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    katib.kubeflow.org/component: db-manager
  name: katib-db-manager
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      katib.kubeflow.org/component: db-manager
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        katib.kubeflow.org/component: db-manager
    spec:
      containers:
      - command:
        - ./katib-db-manager
        env:
        - name: DB_NAME
          value: mysql
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: mysql-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mysql-secret
        - name: KATIB_MYSQL_DB_DATABASE
          valueFrom:
            secretKeyRef:
              key: database
              name: mysql-secret
        - name: KATIB_MYSQL_DB_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: mysql-secret
        - name: KATIB_MYSQL_DB_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: mysql-secret
        image: docker.io/kubeflowkatib/katib-db-manager:v0.12.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:6789
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 60
        name: katib-db-manager
        ports:
        - containerPort: 6789
          name: api
